--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
 
     <include
         android:id="@+id/toolbarLogin"
-        android:layout="@layout/toolbar_login"
+        layout="@layout/toolbar_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -88,6 +88,7 @@
                 android:text="@string/btnLogin"
                 android:textColor="@color/white"
                 android:layout_gravity="center"
+                android:onClick="onBtnLogin"
                 android:textAlignment="center"/>
         </LinearLayout>
 
