--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#FFff0000"
+    android:background="@color/red_700"
     android:elevation="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,10 +16,11 @@
             android:id="@+id/btnPrep"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginEnd="2dp"
+            android:layout_marginEnd="1dp"
             android:onClick="onBtnPrepare"
             android:text="@string/btnPrepare"
             android:textColor="@color/black"
+            android:textSize="32sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/btnAVM"
             app:layout_constraintEnd_toStartOf="@+id/btnAVM"
             app:layout_constraintStart_toStartOf="parent" />
@@ -28,11 +29,12 @@
             android:id="@+id/btnAVM"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
-            android:layout_marginEnd="2dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginEnd="1dp"
             android:onClick="onBtnAVM"
             android:text="@string/btnAVM"
             android:textColor="@color/black"
+            android:textSize="32sp"
             app:layout_constraintEnd_toStartOf="@+id/btnReady"
             app:layout_constraintStart_toEndOf="@+id/btnPrep"
             app:layout_constraintTop_toTopOf="@+id/btnReady" />
@@ -41,11 +43,12 @@
             android:id="@+id/btnReady"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
-            android:layout_marginEnd="2dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginEnd="1dp"
             android:onClick="onBtnReady"
             android:text="@string/btnReady"
             android:textColor="@color/black"
+            android:textSize="32sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/btnGo"
             app:layout_constraintEnd_toStartOf="@+id/btnGo"
             app:layout_constraintStart_toEndOf="@+id/btnAVM" />
@@ -55,10 +58,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
-            android:layout_marginEnd="58dp"
+            android:layout_marginEnd="32dp"
             android:onClick="onBtnGo"
             android:text="@string/btnGo"
             android:textColor="@color/black"
+            android:textSize="32sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/space"
             app:layout_constraintStart_toEndOf="@+id/btnReady"
@@ -68,8 +72,8 @@
             android:id="@+id/space"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="58dp"
-            android:layout_marginEnd="58dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/lineTitleNumber"
             app:layout_constraintStart_toEndOf="@+id/btnGo"
@@ -80,6 +84,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/lineNumber"
+            android:textSize="32sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/space"
@@ -91,6 +96,7 @@
             android:layout_height="match_parent"
             app:layout_constraintStart_toEndOf="@id/lineTitle"
             app:layout_constraintTop_toTopOf="parent"
+            android:textSize="32sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
