--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -91,8 +91,8 @@
                 android:text="@string/btnLogin"
                 android:textColor="@color/white"
                 android:layout_gravity="center"
-                android:onClick="onBtnLogin"
-                android:textAlignment="center"/>
+                android:textAlignment="center"
+                android:onClick="onBtnLogin"/>
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
