--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -93,8 +93,7 @@
                 android:text="@string/btnLogin"
                 android:textColor="@color/white"
                 android:layout_gravity="center"
-                android:textAlignment="center"
-                android:onClick="onBtnLogin"/>
+                android:textAlignment="center"/>
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
