--- a/app/src/main/res/layout/toolbar_select.xml
+++ b/app/src/main/res/layout/toolbar_select.xml
@@ -42,12 +42,23 @@
             android:id="@+id/btnSelect"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
-            android:onClick="onBtnSelect"
             android:text="@string/btnSelect"
             android:textColor="@color/black"
             app:layout_constraintStart_toEndOf="@+id/edtSessionName"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <Button
+            android:id="@+id/btnControl"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:text="@string/btnControl"
+            android:textColor="@color/black"
+            app:layout_constraintStart_toEndOf="@+id/btnSelect"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="20sp"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
