--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -87,13 +87,13 @@
                 android:id="@+id/btnLogin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/red_200"
+                android:backgroundTint="?attr/colorPrimary"
                 android:minHeight="48sp"
                 android:minWidth="200sp"
                 android:text="@string/btnLogin"
-                android:textColor="@color/white"
                 android:layout_gravity="center"
-                android:textAlignment="center"/>
+                android:textAlignment="center"
+                android:textSize="20sp"/>
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
