--- a/app/src/main/res/layout/toolbar_select.xml
+++ b/app/src/main/res/layout/toolbar_select.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#FFff0000"
+    android:background="?attr/colorPrimary"
     android:elevation="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -47,17 +47,16 @@
             android:layout_height="60dp"
             android:text="@string/btnSelect"
             android:layout_marginStart="10dp"
-            android:textColor="@color/black"
             app:layout_constraintStart_toEndOf="@+id/txtSessionName"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="20sp"/>
 
         <Button
             android:id="@+id/btnControl"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:text="@string/btnControl"
-            android:textColor="@color/black"
             app:layout_constraintStart_toEndOf="@+id/btnSelect"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
